tests/toy/neg/000927_mutation.toylang
program a = { if a else then sleep; } .
